# Trace

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Dependencies.cmake  Sanitizers.cmake  Targets.cmake
include/: Core.h  IndexBuffer.h  LogEntry.h  Logger.h  Mesh.h  Panel.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h  Window.h
shaders/: basic.frag  basic.vert
src/: CMakeLists.txt  IndexBuffer.cpp  Logger.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  main.cpp  pch.h
src/imgui/: ImGuiManager.cpp  ImGuiManager.h
src/imgui/panels/: DebugPanel.cpp  DebugPanel.h  LogPanel.cpp  LogPanel.h
tests/: CMakeLists.txt  LoggerTests.cpp
